# avocado-control

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  example-config.toml
.github/workflows/: pr.yml  security-reusable.yml  test-reusable.yml
docs/: varlink-api-reference.md
docs/features/: deterministic-extension-merge-ordering.md  varlink-ipc-interface.md
src/: config.rs  gc.rs  hash.rs  main.rs  manifest.rs  metadata.rs  os_update.rs  output.rs  overrides.rs  staging.rs  update.rs  validate.rs  varlink_client.rs  varlink_server.rs
src/commands/: boot.rs  ext.rs  hitl.rs  image_adaptor.rs  mod.rs  root_authority.rs  runtime.rs
src/service/: error.rs  ext.rs  hitl.rs  mod.rs  root_authority.rs  runtime.rs  types.rs
src/varlink/: mod.rs  org.avocado.Extensions.varlink  org.avocado.Hitl.varlink  org.avocado.RootAuthority.varlink  org.avocado.Runtimes.varlink  org_avocado_Extensions.rs  org_avocado_Hitl.rs  org_avocado_RootAuthority.rs  org_avocado_Runtimes.rs
systemd/: avocadoctl.service  avocadoctl.socket
tests/: README.md  ext_integration_tests.rs  hitl_integration_tests.rs  integration_tests.rs  varlink_interface_tests.rs
tests/fixtures/: example_config.toml  mock-depmod  mock-echo  mock-ls  mock-modprobe  mock-mount  mock-nginx  mock-other_command  mock-prometheus  mock-systemctl  mock-systemd-confext  mock-systemd-dissect  mock-systemd-mount  mock-systemd-sysext  mock-systemd-sysext-empty  mock-systemd-umount  mock-touch  mock-umount  mock-update-initramfs
tests/fixtures/confext-release.d/: extension-release.config-mgmt  extension-release.config-services  extension-release.monitoring
(+12 files in other folders)
