[package]
name = "avocadoctl"
version = "0.2.2"
edition = "2021"
description = "Avocado Linux control CLI tool"
authors = ["Avocado"]
license = "Apache-2.0"

[[bin]]
name = "avocadoctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
termcolor = "1.4"

[dev-dependencies]
tempfile = "3.8"
