[package]
name = "avocadoctl"
version = "0.5.0-dev"
edition = "2021"
description = "Avocado Linux control CLI tool"
authors = ["Avocado"]
license = "Apache-2.0"

[[bin]]
name = "avocadoctl"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4.4", features = ["derive"] }
ed25519-compact = "2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
termcolor = "1.4"
toml = "0.8"
tough = { version = "0.21", default-features = false }
ureq = "3"
uuid = { version = "1", features = ["v4", "v5"] }
varlink = "13"

[build-dependencies]
varlink_generator = "13"

[dev-dependencies]
tempfile = "3.8"
